# IOT_QT_QML

./: CMakeLists.txt  CircleProgress.qml  Main.qml  README.md  SwitchButton.qml  main.cpp
android/: AndroidManifest.xml
